App can now list customers, and you can click on a customer

--- a/Project2/TCCart/app/src/main/AndroidManifest.xml
+++ b/Project2/TCCart/app/src/main/AndroidManifest.xml
@@ -15,7 +15,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".CustomerActivity"></activity>
+        <activity android:name=".CustomerActivity" />
+        <activity android:name=".CustomersActivity"></activity>
     </application>
 
 </manifest>
