--- a/Project2/TCCart/app/src/main/AndroidManifest.xml
+++ b/Project2/TCCart/app/src/main/AndroidManifest.xml
@@ -17,7 +17,8 @@
         </activity>
         <activity android:name=".CustomerActivity" />
         <activity android:name=".CustomersActivity" />
-        <activity android:name=".AddCustomerActivity"></activity>
+        <activity android:name=".AddCustomerActivity" />
+        <activity android:name=".EditCustomerActivity"></activity>
     </application>
 
 </manifest>
