New process purchase feature (incomplete)

--- a/Project2/TCCart/app/src/main/AndroidManifest.xml
+++ b/Project2/TCCart/app/src/main/AndroidManifest.xml
@@ -18,7 +18,8 @@
         <activity android:name=".CustomerActivity" />
         <activity android:name=".CustomersActivity" />
         <activity android:name=".AddCustomerActivity" />
-        <activity android:name=".EditCustomerActivity"></activity>
+        <activity android:name=".EditCustomerActivity" />
+        <activity android:name=".NewTransactionIntent"></activity>
     </application>
 
 </manifest>
