--- a/Project2/TCCart/app/build.gradle
+++ b/Project2/TCCart/app/build.gradle
@@ -23,5 +23,7 @@ dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.2.1'
+    compile 'com.github.satyan:sugar:1.4'
+
     compile files('libs/tccart-services.jar')
 }
