--- a/Project2/TCCart/app/src/main/AndroidManifest.xml
+++ b/Project2/TCCart/app/src/main/AndroidManifest.xml
@@ -7,7 +7,8 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:name=".CartApplication">
         <activity android:name=".HomeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -20,6 +21,11 @@
         <activity android:name=".AddCustomerActivity" />
         <activity android:name=".EditCustomerActivity" />
         <activity android:name=".NewTransactionIntent"></activity>
+
+        <meta-data android:name="DATABASE" android:value="cart_database2.db" />
+        <meta-data android:name="VERSION" android:value="2" />
+        <meta-data android:name="QUERY_LOG" android:value="true" />
+        <meta-data android:name="DOMAIN_PACKAGE_NAME" android:value="edu.gatech.seclass.tccart" />
     </application>
 
 </manifest>
