--- a/Project2/TCCart/build.gradle
+++ b/Project2/TCCart/build.gradle
@@ -1,5 +1,11 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
+allprojects {
+    buildDir = "C:/tmp/${rootProject.name}/${project.name}"
+    repositories {
+    }
+}
+
 buildscript {
     repositories {
         jcenter()
