Added more transaction features/fixed a bug

--- a/Project2/TCCart/app/src/main/AndroidManifest.xml
+++ b/Project2/TCCart/app/src/main/AndroidManifest.xml
@@ -35,7 +35,8 @@
             android:name="DOMAIN_PACKAGE_NAME"
             android:value="edu.gatech.seclass.tccart" />
 
-        <activity android:name=".TransactionConfirmationActivity"></activity>
+        <activity android:name=".TransactionConfirmationActivity" />
+        <activity android:name=".CustomerTransactionsActivity"></activity>
     </application>
 
 </manifest>
